--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=backend
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/finalexam_db
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:30752/railway
 spring.datasource.username=postgres
-spring.datasource.password=Iradukunda123?
+spring.datasource.password=yMIzLtmnWuxiGTCvWoqeCKtzKuSMMaKr
 
 #Mail
 spring.mail.host=smtp.gmail.com
